Fix permissions for creating attestations
https://docs.github.com/en/actions/security-for-github-actions/using-artifact-attestations/using-artifact-attestations-to-establish-provenance-for-builds#generating-build-provenance-for-container-images

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,12 @@ env:
   LATEST_ZSH: "5.9"
   LATEST_OMZ: "master" # TODO: we need to change master with main when migrating the branch
 
+permissions:
+  id-token: write
+  contents: read
+  attestations: write
+  packages: write
+
 jobs:
   get-omz-versions:
     name: Get Oh My Zsh versions
